crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_5.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     while True:
%%         return 1
%%     else:
%%         return "unreachable"
%%     return "also unreachable"

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return #quot;also unreachable#quot;\n"]
  block1["return 1\n"]
  block2["return #quot;unreachable#quot;\n"]
  block3["while True:
        return 1
    else:
        return #quot;unreachable#quot;\n"]

  start --> block3
  block3 -- "True" --> block1
  block3 -- "else" --> block2
  block2 --> return
  block1 --> return
  block0 --> return

