crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_6.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     i = 0
%%     while False:
%%         i += 1
%%     return i

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return i\n"]
  block1["i += 1\n"]
  block2["i = 0\nwhile False:
        i += 1\n"]

  start --> block2
  block2 -- "False" --> block1
  block2 -- "else" --> block0
  block1 --> block2
  block0 --> return

