crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_8.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     while True:
%%         pass
%%     return 1

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]
  block1["pass\n"]
  block2["while True:
        pass\n"]

  start --> block2
  block2 -- "True" --> block1
  block2 -- "else" --> block0
  block1 --> block2
  block0 --> return

